--- a/laneswap/examples/web_monitor/index.html
+++ b/laneswap/examples/web_monitor/index.html
@@ -3,95 +3,241 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laneswap Service Monitor</title>
+    <title data-i18n="title">LaneSwap Monitor</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <header>
-        <h1>Laneswap Service Monitor</h1>
-        <div class="controls">
-            <input type="text" id="api-url" value="http://localhost:8000" placeholder="API URL">
-            <button id="refresh-btn">Refresh</button>
-            <label>
-                <input type="checkbox" id="auto-refresh" checked>
-                Auto-refresh (10s)
-            </label>
+<body class="dark-mode">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <i class="bi bi-heart-pulse-fill text-primary me-2"></i>
+                    <span data-i18n="nav.title">LaneSwap Monitor</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#" data-i18n="nav.dashboard">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#settingsModal" data-i18n="nav.settings">Settings</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#helpModal" data-i18n="nav.help">Help</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex">
+                        <div class="btn-group btn-group-sm" role="group">
+                            <button type="button" class="btn btn-outline-light" onclick="changeLanguage('en')">EN</button>
+                            <button type="button" class="btn btn-outline-light" onclick="changeLanguage('th')">TH</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <div class="row g-3 mb-3">
+            <div class="col-md-6">
+                <div class="input-group">
+                    <span class="input-group-text" data-i18n="api.url">API URL</span>
+                    <input type="text" id="apiUrlInput" class="form-control" placeholder="http://localhost:8000">
+                    <button class="btn btn-primary" id="connectBtn" data-i18n="api.connect">Connect</button>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="input-group">
+                    <span class="input-group-text" data-i18n="refresh.interval">Refresh</span>
+                    <select id="refreshIntervalSelect" class="form-select">
+                        <option value="0" data-i18n="refresh.manual">Manual</option>
+                        <option value="5" data-i18n="refresh.5sec">5 seconds</option>
+                        <option value="10" data-i18n="refresh.10sec">10 seconds</option>
+                        <option value="30" data-i18n="refresh.30sec">30 seconds</option>
+                        <option value="60" data-i18n="refresh.60sec">60 seconds</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="btn-group w-100" role="group">
+                    <button id="refreshBtn" class="btn btn-outline-primary">
+                        <i class="bi bi-arrow-clockwise"></i> <span data-i18n="refresh.button">Refresh</span>
+                    </button>
+                    <button id="viewGridBtn" class="btn btn-outline-secondary active">
+                        <i class="bi bi-grid-3x3"></i>
+                    </button>
+                    <button id="viewTableBtn" class="btn btn-outline-secondary">
+                        <i class="bi bi-table"></i>
+                    </button>
+                </div>
+            </div>
         </div>
-    </header>
 
-    <main>
-        <section class="summary-section">
-            <h2>Summary</h2>
-            <div class="summary-cards">
-                <div class="summary-card total">
-                    <h3>Total Services</h3>
-                    <p id="total-count">0</p>
-                </div>
-                <div class="summary-card healthy">
-                    <h3>Healthy</h3>
-                    <p id="healthy-count">0</p>
-                </div>
-                <div class="summary-card degraded">
-                    <h3>Degraded</h3>
-                    <p id="degraded-count">0</p>
-                </div>
-                <div class="summary-card error">
-                    <h3>Error</h3>
-                    <p id="error-count">0</p>
-                </div>
-                <div class="summary-card stale">
-                    <h3>Stale</h3>
-                    <p id="stale-count">0</p>
+        <div class="row g-3 mb-3">
+            <div class="col-md-12">
+                <div class="input-group">
+                    <span class="input-group-text" data-i18n="search.label">Search</span>
+                    <input type="text" id="searchInput" class="form-control" placeholder="Filter by name, ID, or status...">
+                    <button class="btn btn-outline-secondary" id="clearSearchBtn">
+                        <i class="bi bi-x"></i>
+                    </button>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="services-section">
-            <h2>Services</h2>
-            <div id="services-list" class="services-list">
-                <div class="loading">Loading services...</div>
+        <div class="row g-3 mb-3">
+            <div class="col-md-12">
+                <div class="status-summary card-group">
+                    <div class="card bg-status-healthy">
+                        <div class="card-body py-2">
+                            <h6 class="card-title mb-0" data-i18n="summary.healthy">Healthy</h6>
+                            <p class="card-text fs-3 fw-bold" id="healthyCount">0</p>
+                        </div>
+                    </div>
+                    <div class="card bg-status-warning">
+                        <div class="card-body py-2">
+                            <h6 class="card-title mb-0" data-i18n="summary.warning">Warning</h6>
+                            <p class="card-text fs-3 fw-bold" id="warningCount">0</p>
+                        </div>
+                    </div>
+                    <div class="card bg-status-error">
+                        <div class="card-body py-2">
+                            <h6 class="card-title mb-0" data-i18n="summary.error">Error</h6>
+                            <p class="card-text fs-3 fw-bold" id="errorCount">0</p>
+                        </div>
+                    </div>
+                    <div class="card bg-status-stale">
+                        <div class="card-body py-2">
+                            <h6 class="card-title mb-0" data-i18n="summary.stale">Stale</h6>
+                            <p class="card-text fs-3 fw-bold" id="staleCount">0</p>
+                        </div>
+                    </div>
+                    <div class="card bg-status-total">
+                        <div class="card-body py-2">
+                            <h6 class="card-title mb-0" data-i18n="summary.total">Total</h6>
+                            <p class="card-text fs-3 fw-bold" id="totalCount">0</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
+        </div>
 
-        <section class="service-details-section hidden" id="service-details-section">
-            <div class="service-details-header">
-                <h2>Service Details: <span id="detail-service-name">Service Name</span></h2>
-                <button id="close-details-btn">Close</button>
-            </div>
-            <div class="service-info-cards">
-                <div class="service-info-card">
-                    <h3>Status</h3>
-                    <p id="detail-status">-</p>
-                </div>
-                <div class="service-info-card">
-                    <h3>Last Heartbeat</h3>
-                    <p id="detail-last-heartbeat">-</p>
-                </div>
-                <div class="service-info-card">
-                    <h3>Service ID</h3>
-                    <p id="detail-service-id">-</p>
-                </div>
-            </div>
-            <div class="service-metadata">
-                <h3>Metadata</h3>
-                <div id="detail-metadata" class="metadata-container">
-                    <p>No metadata available</p>
-                </div>
-            </div>
-            <div class="service-events">
-                <h3>Recent Events</h3>
-                <div id="detail-events" class="events-container">
-                    <p>No events available</p>
-                </div>
-            </div>
-        </section>
-    </main>
+        <div id="servicesList" class="row g-3 services-container">
+            <!-- Services will be populated here -->
+            <div class="loading" data-i18n="loading">Loading services...</div>
+        </div>
 
-    <footer>
-        <p>Laneswap Heartbeat Monitor &copy; 2024</p>
-        <p>Last updated: <span id="last-updated">Never</span></p>
-    </footer>
+        <div class="row mt-3">
+            <div class="col-md-12">
+                <div class="d-flex justify-content-between align-items-center">
+                    <small class="text-muted" id="lastUpdated" data-i18n="lastUpdated">Last updated: Never</small>
+                    <small class="text-muted">
+                        <span data-i18n="poweredBy">Powered by</span> <a href="https://github.com/yourusername/laneswap" target="_blank">LaneSwap</a>
+                    </small>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- Service Details Modal -->
+    <div class="modal fade" id="serviceDetailsModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="serviceDetailsTitle" data-i18n="modal.serviceDetails">Service Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="serviceDetailsBody">
+                    <!-- Service details will be populated here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="modal.close">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Settings Modal -->
+    <div class="modal fade" id="settingsModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" data-i18n="settings.title">Settings</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="themeSelect" class="form-label" data-i18n="settings.theme">Theme</label>
+                        <select id="themeSelect" class="form-select">
+                            <option value="light" data-i18n="settings.light">Light</option>
+                            <option value="dark" data-i18n="settings.dark">Dark</option>
+                            <option value="system" data-i18n="settings.system">System</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="languageSelect" class="form-label" data-i18n="settings.language">Language</label>
+                        <select id="languageSelect" class="form-select">
+                            <option value="en" data-i18n="settings.english">English</option>
+                            <option value="th" data-i18n="settings.thai">Thai</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="dateFormatSelect" class="form-label" data-i18n="settings.dateFormat">Date Format</label>
+                        <select id="dateFormatSelect" class="form-select">
+                            <option value="relative" data-i18n="settings.relative">Relative (5 minutes ago)</option>
+                            <option value="absolute" data-i18n="settings.absolute">Absolute (YYYY-MM-DD HH:MM:SS)</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="modal.cancel">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="saveSettingsBtn" data-i18n="modal.save">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Help Modal -->
+    <div class="modal fade" id="helpModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" data-i18n="help.title">Help</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6 data-i18n="help.about">About LaneSwap Monitor</h6>
+                    <p data-i18n="help.description">LaneSwap Monitor is a real-time dashboard for monitoring service health in distributed systems.</p>
+                    
+                    <h6 class="mt-3" data-i18n="help.usage">Usage</h6>
+                    <ol>
+                        <li data-i18n="help.step1">Enter the API URL (e.g., http://localhost:8000)</li>
+                        <li data-i18n="help.step2">Click "Connect" to fetch services</li>
+                        <li data-i18n="help.step3">Set the refresh interval or manually refresh</li>
+                        <li data-i18n="help.step4">Click on a service card to view details</li>
+                    </ol>
+                    
+                    <h6 class="mt-3" data-i18n="help.statusCodes">Status Codes</h6>
+                    <ul class="list-unstyled">
+                        <li><span class="badge bg-status-healthy">Healthy</span> <span data-i18n="help.healthy">Service is operating normally</span></li>
+                        <li class="mt-1"><span class="badge bg-status-warning">Warning</span> <span data-i18n="help.warning">Service has non-critical issues</span></li>
+                        <li class="mt-1"><span class="badge bg-status-error">Error</span> <span data-i18n="help.error">Service has critical issues</span></li>
+                        <li class="mt-1"><span class="badge bg-status-stale">Stale</span> <span data-i18n="help.stale">Service hasn't sent a heartbeat recently</span></li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-i18n="modal.ok">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="i18n.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
