--- a/laneswap/examples/web_monitor/index.html
+++ b/laneswap/examples/web_monitor/index.html
@@ -72,12 +72,9 @@
                         <span class="material-symbols-rounded">refresh</span>
                     </button>
                     
-                    <div class="btn-group view-controls">
-                        <button id="viewGridBtn" class="btn view-btn active" aria-label="Grid view">
-                            <span class="material-symbols-rounded">grid_view</span>
-                        </button>
-                        <button id="viewTableBtn" class="btn view-btn" aria-label="Table view">
-                            <span class="material-symbols-rounded">table_rows</span>
+                    <div class="btn-group notification-controls">
+                        <button id="notificationToggleBtn" class="btn notification-btn" aria-label="Toggle notifications">
+                            <span class="material-symbols-rounded">notifications</span>
                         </button>
                     </div>
                 </div>
@@ -132,8 +129,8 @@
                 <div class="d-flex justify-content-between align-items-center px-3 py-2">
                     <div class="last-updated" id="lastUpdated" data-i18n="lastUpdated">Last updated: Never</div>
                     <div class="footer-branding">
-                        <span data-i18n="poweredBy">Powered by</span>
-                        <a href="https://github.com/yourusername/laneswap" target="_blank" class="laneswap-link">LaneSwap</a>
+        
+                        <a href="https://github.com/Justar96/laneswap-2.0" target="_blank" class="laneswap-link">Github</a>
                     </div>
                 </div>
             </footer>
